Actors page details inc. known for info

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss-spinner": "^1.2.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
+        "@icon/unicons": "^3.0.6-alpha.0",
         "tailwindcss": "^2.0.3"
     }
 }
